--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-mongoose.connect('mongodb+srv://ak1824871:AO0vbLlIv4laVQJA@campus-marketplace.kg2xlqk.mongodb.net/?retryWrites=true&w=majority', { useNewUrlParser: true, useUnifiedTopology: true });
+mongoose.connection=mongodb+srv://ak1824871:AO0vbLlIv4laVQJA@campus-marketplace.kg2xlqk.mongodb.net/?retryWrites=true&w=majority
