--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-mongoose.connection=mongodb+srv://ak1824871:AO0vbLlIv4laVQJA@campus-marketplace.kg2xlqk.mongodb.net/?retryWrites=true&w=majority
+mongoose_connection=mongodb+srv://ak1824871:AO0vbLlIv4laVQJA@campus-marketplace.kg2xlqk.mongodb.net/?retryWrites=true&w=majority
